# sketches-backends-in-python

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  requirements.txt
.devcontainer/: devcontainer.json
add-sketch/: cookiecutter.json
add-sketch/{{cookiecutter.__sketch_slug}}/: README.md  pyproject.toml
add-sketch/{{cookiecutter.__sketch_slug}}/frontend_mockup/: __init__.py  __main__.py  index.html
add-sketch/{{cookiecutter.__sketch_slug}}/{{cookiecutter.__python_project}}/: __init__.py  __main__.py
sketch-a/: README.md  pyproject.toml
sketch-a/sketch_a/backend/: main.py
sketch-a/sketch_a/frontend-mockup/: some.html  some.js  some.txt  use-js.html
sketch-b/: README.md  pyproject.toml
sketch-b/sketch_b/backend/: main.py
sketch-c/: README.md  pyproject.toml
sketch-c/sketch_c/backend/: main.py  some_program.sh
sketch-d/: README.md  pyproject.toml
sketch-d/sketch_d/backend/: linear_function.sh  main.py
sketch-e/: README.md  pyproject.toml
sketch-e/sketch_e/backend/: main.py
sketch-f/: .gitignore  README.md  pyproject.toml
sketch-f/backend/: __init__.py  __main__.py
sketch-f/frontend_mockup/: __init__.py  __main__.py  index.html
sketch-f/protocols/: some_protocol.proto
sketch-g/: .gitignore  README.md  pyproject.toml
sketch-g/backend/: create_glb.py
sketch-g/frontend_mockup/: package-lock.json  package.json
sketch-g/frontend_mockup/public/: model.glb
sketch-g/frontend_mockup/src/: App.js  ModelViewer.js  PointCloudViewer.js  ThreeDViewer.js  WireframeViewer.js
sketch-g/frontend_mockup/src/components/: ThreeDViewer.js
